--- a/project_workflows/Exp555_cordycepin_comparison_v2-RUVSeq.Rmd
+++ b/project_workflows/Exp555_cordycepin_comparison_v2-RUVSeq.Rmd
@@ -669,7 +669,7 @@ test <- dabest(.data = w1, x = Condition,
 	y = halflife, 
 	#y = log_halflife,
 	idx = c("Smith", "Narsai", "Sorenson", "Szabo", "Chantarachot"), 
-	paired=FALSE)
+	paired=TRUE, id.col = "geneID")
 
 test1 <- cliffs_delta(test, reps=10000)
 test2 <- mean_diff(test, reps=10000)
@@ -700,7 +700,7 @@ a <- select(w1, geneID, Condition, halflife) %>%
 	spread(Condition, halflife) %>%
 	gather(group, halflife, -geneID, -Smith) %>%
 	mutate(diff = a1$diff[match(group, a1$test)]) %>%
-	imutate(x = halflife - Smith) %>%
+	mutate(x = halflife - Smith) %>%
 	mutate(test = ifelse(x > diff, yes = 1, no = 0))
 
 a_venn <- select(a, geneID, group, test) %>% spread(group, test)
@@ -719,10 +719,11 @@ test <- dabest(.data = out_all,
 	x = Condition,
         y = halflife,
         idx = c("NL", "EL", "Rec"),
-        paired=FALSE)
+        paired=TRUE, id.col = "geneID")
 
 test1 <- cliffs_delta(test, reps=10000)
 test2 <- mean_diff(test, reps=10000)
+test3 <- median_diff(test, reps=10000)
 
 pdf("dabest_all_log2.pdf")
 #plot(test1, rawplot.ylabel = "log2 half-life + 0.01 (min)")
@@ -744,5 +745,41 @@ ggplot(data=test1$data) + aes(x=Condition, y=log_halflife, fill=Condition) +
                 label=paste("delta",round(c(0,test1$result$difference),2), sep='='))
 
 dev.off()
+
+a1 <- data.frame(test = test3$result$test_group, diff = test3$result$difference)
+a <- select(out_all, geneID, Condition, halflife) %>%
+        spread(Condition, halflife) %>%
+        gather(group, halflife, -geneID, -NL) %>%
+        mutate(diff = a1$diff[match(group, a1$test)]) %>%
+        mutate(x = halflife - NL) %>%
+        mutate(test = ifelse(x < diff, yes = 1, no = 0)) %>%
+	subset(group == "EL")
+
+a_venn <- select(a, geneID, group, test) %>% spread(group, test)
+
+subset(a_venn, EL == 1) %>% select(geneID)%>% write_csv("Smith_EL_low_halflife.csv")
+
+######
+## mRNA half-life vs polysome-RNA
+polyR <- dir("polysome_rna/") %>% tibble() %>% 
+	mutate(file_contents = map(., ~read_csv(file.path("polysome_rna", .)))) %>%
+	unnest(cols=c(file_contents)) %>%
+	gather(sample, rpkm, -., -ID, -Length, na.rm = T) %>%
+	mutate(type = sapply(strsplit(sample, "_"), function(l) l[3])) %>%
+	mutate(time = sapply(strsplit(., "_"), function(l) l[3])) %>%
+	mutate(time = paste0('t',time)) %>%
+	mutate(sample = sapply(strsplit(sample, "_"), function(l) paste0(l[1],l[2]))) %>%
+	group_by(ID,type,time) %>% summarise(avg_rpkm = mean(rpkm)) %>%
+	subset(time == 't30' | time == 't90') %>%
+	spread(type, avg_rpkm)
+
+
+
+
+
+
+
+
+
 
 
